# remove-duplications-elasticsearch

./: Dockerfile  Makefile  README.md  build_deploy.sh  pyproject.toml
openshift/: template.yaml
src/remove_duplications_elasticsearch/: config.py  exceptions.py  logger.py  main.py  utils.py
tests/remove_duplications_elasticsearch/: test_main.py
