[build-system]
requires = [
    "setuptools==65.5.1",
    "setuptools_scm[toml]==7.0.5",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "remove-duplications-elasticsearch"
description = "Remove duplicated documents from elasticsearch indices"
readme = "README.md"
keywords = ["prow"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
    "opensearch-py==2.3.1",
]
dynamic = ["version"]

[project.scripts]
remove-duplications-elasticsearch = "remove_duplications_elasticsearch.main:main"

[project.optional-dependencies]
test-runner = [
    "tox==4.11.3",
]
unit-tests = [
    "pytest==7.4.2",
]

lint = [
    "black==23.9.1",
    "isort==5.12.0",
    "mypy==1.5.1",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = python3.11

[testenv]
usedevelop=True
commands = pytest {posargs}
deps = .[unit-tests]
"""

[tool.black]
line-length = 70
